<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.UpdatePassword">


    <EditText
        android:id="@+id/Email"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="255dp"
        android:layout_marginEnd="41dp"
        android:background="@drawable/input_field"
        android:hint="@string/direccion_email"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:textColorHint="@color/Gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="259dp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_below="@+id/Email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="41dp"
        android:background="@drawable/input_field"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:maxLength="20"
        android:singleLine="true"
        android:textColorHint="@color/Gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email"
        app:layout_constraintVertical_bias="0.048" />

    <Button
        android:id="@+id/actualizar"
        android:layout_width="162dp"
        android:layout_height="53dp"
        android:layout_below="@+id/Password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="113dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="113dp"
        android:background="@drawable/button"
        android:hint="@string/actualizar"
        android:textAllCaps="false"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_alignBottom="@+id/Email"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="64dp"
        android:text="@string/restablecer"
        android:textAlignment="center"
        android:textColor="@color/Gray"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942" />


</RelativeLayout>